--- a/contact/index.html
+++ b/contact/index.html
@@ -113,7 +113,7 @@
             ukravtobezpeka@ukr.net</a></li>
         
         <li style="white-space: pre-wrap;"><strong>Адреса: </strong><br>Україна, м. Київ, 02068
-пр. Петра Григоренко 33/44, оф. 505
+пр. Петра Григоренко 33/44
 </li>
         
       </ul>
