--- a/services/medichna/index.html
+++ b/services/medichna/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Ліцензія на медичну практику (для здійснення передрейсових та післярейсових оглядів водіїв). - УкрАвтоБезпека</title>
+  <title>Ліцензія на медичну практику (для здійснення передрейсових та післярейсових оглядів водіїв). - УКРАВТОБЕЗПЕКА</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon.png">
@@ -157,7 +157,7 @@
                 ukravtobezpeka@ukr.net</a></li>
           </ul>
           <ul>
-           <li class="copyright">© 2021 УкрАвтоБезпека</li>
+           <li class="copyright">© 2021 УКРАВТОБЕЗПЕКА</li>
           </ul>
         </div>
       </div>
