--- a/contact/index.html
+++ b/contact/index.html
@@ -103,12 +103,12 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-8">
-      <p>Ми пропонуємо безкоштовну консультацію для всіх нових кліентів.</p>
-
+      
       <ul>
-        <li><strong>Тел: </strong>&#43;380664064039</li>
+        <div style="display: none;">0664064039 , 0962727989</div>
+        <li><strong>Тел: </strong><a href="tel:&#43;38%20066%20406-40-39">&#43;38 066 406-40-39</a></li>
         <li><strong>Viber,Telegram: </strong>&#43;380962727989</li>
-        <li><strong>Робочі часи: </strong>Пн-Нд 8:00-20:00</li>
+        <li><strong>Режим роботи: </strong>Пн-Нд 8:00-20:00</li>
         <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
             ukravtobezpeka@ukr.net</a></li>
         
@@ -131,7 +131,7 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Тел: </strong>&#43;380664064039</li>
+            <li><strong>Тел: </strong><a href="tel:&#43;38%20066%20406-40-39">&#43;38 066 406-40-39</a></li>
             <li><strong>Viber,Telegram: </strong>&#43;380962727989</li>
             <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
                 ukravtobezpeka@ukr.net</a></li>
