--- a/services/index.html
+++ b/services/index.html
@@ -201,7 +201,7 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
-            <li><strong>Тел: </strong>&#43;380664064039</li>
+            <li><strong>Тел: </strong><a href="tel:&#43;38%20066%20406-40-39">&#43;38 066 406-40-39</a></li>
             <li><strong>Viber,Telegram: </strong>&#43;380962727989</li>
             <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
                 ukravtobezpeka@ukr.net</a></li>
