--- a/contact/index.html
+++ b/contact/index.html
@@ -131,6 +131,7 @@
       <div class="col-12">
         <div class="sub-footer-inner">
           <ul>
+            <div style="display: none;">0664064039 , 0962727989 , +380664064039 , +380962727989</div>
             <li><strong>Тел: </strong><a href="tel:&#43;38%20066%20406-40-39">&#43;38 066 406-40-39</a></li>
             <li><strong>Viber,Telegram: </strong>&#43;380962727989</li>
             <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
