--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.4be821da6f580945734893eade9608940c6a2fa967507a70de1582d975493bc3.css">
+  <link rel="stylesheet" href="/css/style.min.1fcd47454b48916a73bd70e3c1396bfbf16aead9f87abe9af1683fc3132f1b4d.css">
   
 
   
@@ -90,6 +90,7 @@
 </button>
   </div>
 </div>
+
     
 
 
@@ -112,9 +113,9 @@
 <p>Сприяння реалізації державної політики в сфері безпеки дорожнього руху, здійснення та захист прав і свобод, задоволення суспільних, зокрема економічних, соціальних, культурних, екологічних, та інших інтересів учасників дорожнього руху.</p>
 <p><strong>Основні пріоритети діяльності</strong></p>
 <ul>
-<li>проведення заходів з безпеки дорожнього руху.</li>
-<li>організація семінарів, лекцій, конференцій, науково-практичних занять.</li>
-<li>проведення громадської експертизи діяльності органів виконавчої влади та органів місцевого самоврядування.</li>
+<li>Проведення заходів з безпеки дорожнього руху.</li>
+<li>Організація семінарів, лекцій, конференцій, науково-практичних занять.</li>
+<li>Проведення громадської експертизи діяльності органів виконавчої влади та органів місцевого самоврядування.</li>
 </ul>
 
         
@@ -144,7 +145,7 @@
                 ukravtobezpeka@ukr.net</a></li>
           </ul>
           <ul>
-           <li class="copyright">© 2021 УКРАВТОБЕЗПЕКА</li>
+           <li class="copyright">© УКРАВТОБЕЗПЕКА</li>
           </ul>
         </div>
       </div>
@@ -159,7 +160,7 @@
   
 
   
-  <script type="text/javascript" src="/js/scripts.min.bf1e1f7ae8e03db5f012356e825843facdff51c0a559cb0d27fe2bbe1db405c2.js"></script>
+  <script type="text/javascript" src="/js/scripts.min.8504133605a277da18f0d58cfd2e90d154962f4a961543a6e2f0a459a2d05462.js"></script>
   
 
   
