--- a/services/taksi/index.html
+++ b/services/taksi/index.html
@@ -11,7 +11,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.4be821da6f580945734893eade9608940c6a2fa967507a70de1582d975493bc3.css">
+  <link rel="stylesheet" href="/css/style.min.1fcd47454b48916a73bd70e3c1396bfbf16aead9f87abe9af1683fc3132f1b4d.css">
   
 
   
@@ -90,6 +90,7 @@
 </button>
   </div>
 </div>
+
     
 <div id="hero" class="hero-image hero-image-setheight" style="background-image: url('/services/service2.jpg')">
   <div class="container ">
@@ -170,7 +171,7 @@
                 ukravtobezpeka@ukr.net</a></li>
           </ul>
           <ul>
-           <li class="copyright">© 2021 УКРАВТОБЕЗПЕКА</li>
+           <li class="copyright">© УКРАВТОБЕЗПЕКА</li>
           </ul>
         </div>
       </div>
@@ -186,12 +187,12 @@
 
 
 
-  <script type="text/javascript" src="/js/services.min.59bfd7d7aaf7e918e4271e11ef3cb4d91e22c83b70437eec78bdffdcd2d51c0a.js"></script>
+  <script type="text/javascript" src="/js/services.min.9107b65a7df0422d8a274963e6b560062a6cdf62185570cfd584b43defa67279.js"></script>
   
 
 
   
-  <script type="text/javascript" src="/js/scripts.min.bf1e1f7ae8e03db5f012356e825843facdff51c0a559cb0d27fe2bbe1db405c2.js"></script>
+  <script type="text/javascript" src="/js/scripts.min.8504133605a277da18f0d58cfd2e90d154962f4a961543a6e2f0a459a2d05462.js"></script>
   
 
   
