--- a/about/index.html
+++ b/about/index.html
@@ -140,7 +140,8 @@
           <ul>
             <div style="display: none;">0664064039 , 0962727989 , +380664064039 , +380962727989</div>
             <li><strong>Тел: </strong><a href="tel:&#43;38%20066%20406-40-39">&#43;38 066 406-40-39</a></li>
-            <li><strong>Viber,Telegram: </strong>&#43;380962727989</li>
+             <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989">+380962727989</a></li>
+        <li><strong>Telegram: </strong><a href="https://t.me/%2B380962727989">+380962727989</a></li>
             <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
                 ukravtobezpeka@ukr.net</a></li>
           </ul>
