--- a/landingtwo/index.html
+++ b/landingtwo/index.html
@@ -118,14 +118,14 @@
         <br>
          <div>
     
-    Ліцензія на медичну практику (для здійснення передрейсових та післярейсових оглядів водіїв).<br>
-    Ліцензія на міжнародні перевезення вантажів.<br>
-    Ліцензія на перевезення небезпечних вантажів та небезпечних відходів.<br>
-    Ліцензія на перевезення пасажирів автобусами.<br>
-    Ліцензія на перевезення пасажирів легковими автомобілями на замовлення.<br>
-    Ліцензія на перевезення пасажирів на таксі.<br>
-    Договір з АТП<br>
-    Та інші.<br></div>
+<a href="https://ukravtobezpeka.org/services/medichna/">Ліцензія на медичну практику (для здійснення передрейсових та післярейсових оглядів водіїв)</a><br>
+<a href="https://ukravtobezpeka.org/services/mizhnarodni/">Ліцензія на міжнародні перевезення вантажів</a><br>
+<a href="https://ukravtobezpeka.org/services/nebezpechni/">Ліцензія на перевезення небезпечних вантажів та небезпечних відходів</a><br>
+<a href="https://ukravtobezpeka.org/services/avtobus/">Ліцензія на перевезення пасажирів автобусами</a><br>
+<a href="https://ukravtobezpeka.org/services/legkovinazamovlennya/">Ліцензія на перевезення пасажирів легковими автомобілями на замовлення</a><br>
+<a href="https://ukravtobezpeka.org/services/taksi/">Ліцензія на перевезення пасажирів на таксі</a><br>
+<a href="https://ukravtobezpeka.org/contact/">Договір з АТП</a><br>
+<a href="https://ukravtobezpeka.org/contact/">Та інші.</a><br></div>
     <br>
         <li><strong>Режим роботи: </strong>Пн-Нд 8:00-20:00</li>
 
