--- a/services/mizhnarodni/index.html
+++ b/services/mizhnarodni/index.html
@@ -99,7 +99,7 @@
       <div class="service service-single">
       <br>
 	<br>
-	  <div><strong> Зверніться до нас зараз, і ми гарантуємо швидке та безпроблемне отримання ліцензій для вашого бізнесу.</strong></div>
+	  <div><strong> Зверніться до нас зараз, і ми гарантуємо швидке та безпроблемне отримання ліцензій для вашого бізнесу. Залиште всю рутину та труднощі нашим експертам.</strong></div>
               <li><strong>Тел: </strong><a href="tel:&#43;380664064039">&#43;380664064039</a></li>
         <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989">+380962727989</a></li>
         <li><strong>Telegram: </strong><a href="https://t.me/%2B380962727989">+380962727989</a></li>
