--- a/landingtwo/index.html
+++ b/landingtwo/index.html
@@ -2,37 +2,9 @@
 <html lang="en">
 
 <head>
-
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Ліцензії на перевезення вантажів, пасажирів, тощо. - УКРАВТОБЕЗПЕКА</title>
-  
-  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-349375267"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'AW-349375267');
-  </script>
-  
-  <script>
-  function gtag_report_conversion(url) {
-    var callback = function () {
-      if (typeof(url) != 'undefined') {
-        window.location = url;
-      }
-    };
-    gtag('event', 'conversion', {
-        'send_to': 'AW-349375267/UqOlCP3ii_0DEKOWzKYB',
-        'value': 10.0,
-        'currency': 'UAH',
-        'event_callback': callback
-    });
-    return false;
-  }
-  </script>
-  
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel="icon" href="/favicon.png">
@@ -138,10 +110,10 @@
       <br>
       <ul>
         <div style="display: none;">0664064039 , 0962727989</div>
-<li><strong>Тел: </strong><a href="tel:&#43;380664064039" onclick="return gtag_report_conversion()">&#43;380664064039</a></li>
-        <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989" onclick="return gtag_report_conversion()">+380962727989</a></li>
-        <li><strong>Telegram: </strong><a href="https://t.me/%2B380962727989" onclick="return gtag_report_conversion()">+380962727989</a></li>
-                <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net" onclick="return gtag_report_conversion()">
+        <li><strong>Тел: </strong><a href="tel:&#43;380664064039">&#43;380664064039</a></li>
+        <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989">+380962727989</a></li>
+        <li><strong>Telegram: </strong><a href="https://t.me/%2B380962727989">+380962727989</a></li>
+                <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
             ukravtobezpeka@ukr.net</a></li>
         <br>
          <div>
@@ -178,11 +150,11 @@
         <div class="sub-footer-inner">
           <ul>
             <div style="display: none;">0664064039 , 0962727989 , +380664064039 , +380962727989</div>
-<li><strong>Тел: </strong><a href="tel:&#43;380664064039" onclick="return gtag_report_conversion()">&#43;380664064039</a></li>
-        <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989" onclick="return gtag_report_conversion()">+380962727989</a></li>
-        <li><strong>Telegram: </strong><a href="https://t.me/%2B380962727989" onclick="return gtag_report_conversion()">+380962727989</a></li>
-                <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net" onclick="return gtag_report_conversion()">
-            ukravtobezpeka@ukr.net</a></li>
+            <li><strong>Тел: </strong><a href="tel:&#43;380664064039">&#43;380664064039</a></li>
+             <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989">+380962727989</a></li>
+        <li><strong>Telegram: </strong><a href="https://t.me/%2B380962727989">+380962727989</a></li>
+            <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
+                ukravtobezpeka@ukr.net</a></li>
           </ul>
           <ul>
            <li class="copyright">© УКРАВТОБЕЗПЕКА</li>
