--- a/homepage/index.html
+++ b/homepage/index.html
@@ -9,6 +9,15 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-K749Y5132R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-K749Y5132R');
+  </script>
   <link rel="icon" href="/favicon.png">
 
   
