--- a/index.html
+++ b/index.html
@@ -20,6 +20,15 @@
 <meta name="twitter:site" content="" />
 <meta name="twitter:creator" content="" />
 
+  
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-K749Y5132R"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-K749Y5132R');
+  </script>
   <link rel="icon" href="/favicon.png">
 
   
