--- a/landing/index.html
+++ b/landing/index.html
@@ -115,7 +115,7 @@
 <div class="container">
   <div class="row">
     <div class="col-12 col-md-8">
-     <div>Пропонуємо послуги з отримання ліцензій на перевезення пасажирів та вантажів будь-якої складності, включаючи таксі, міжнародні перевезення грузів, перевезення небезпечних вантажів та отримання ліцензії на медичну практику. Наша команда допоможе вам з оформленням документів та забезпечить швидкий процес отримання ліцензій. Ми також пропонуємо юридичну допомогу в інших сферах, що стосуються вашого бізнесу. Зверніться до нас зараз, і ми з радістю вам допоможемо!</div>
+     <div>Пропонуємо послуги з отримання ліцензій на перевезення пасажирів та вантажів будь-якої складності, включаючи таксі, міжнародні перевезення вантажів, перевезення небезпечних вантажів та отримання ліцензії на медичну практику. Наша команда допоможе вам з оформленням документів та забезпечить швидкий процес отримання ліцензій. Ми також пропонуємо юридичну допомогу в інших сферах, що стосуються вашого бізнесу. Зверніться до нас зараз, і ми з радістю вам допоможемо!</div>
       
       <br>
       <ul>
@@ -126,7 +126,7 @@
                 <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
             ukravtobezpeka@ukr.net</a></li>
         <br>
-        <li><strong>Режим роботи: </strong>Пн-Нд 8:00-20:00</li>
+        <li><strong>Режим роботи: </strong>Пн-Нд 8:00-18:00</li>
 
         
         <li style="white-space: pre-wrap;"><strong>Адреса: </strong><br>Україна, м. Київ, 02068
