--- a/landingtwo/index.html
+++ b/landingtwo/index.html
@@ -116,7 +116,7 @@
   <div class="row">
     <div class="col-12 col-md-8">
    
-     <div>Ми забезпечуємо повний спектр послуг, що стосуються отримання ліцензій, включаючи консультації, оформлення документів та супровід на кожному етапі процесу. Пропонуємо послуги з отримання ліцензій на перевезення пасажирів та вантажів будь-якої складності, включаючи таксі, міжнародні перевезення грузів, перевезення небезпечних вантажів та отримання ліцензій на медичну практику(для здійснення передрейсових та післярейсових оглядів водіїв). Зверніться до нас зараз, і ми гарантуємо швидке та безпроблемне отримання ліцензій для вашого бізнесу.</div>
+     <div>Ми забезпечуємо повний спектр послуг, що стосуються отримання ліцензій, включаючи консультації, оформлення документів та супровід на кожному етапі процесу. Пропонуємо послуги з отримання ліцензій на перевезення пасажирів та вантажів будь-якої складності, включаючи таксі, міжнародні перевезення вантажів, перевезення небезпечних вантажів та отримання ліцензій на медичну практику(для здійснення передрейсових та післярейсових оглядів водіїв). Зверніться до нас зараз, і ми гарантуємо швидке та безпроблемне отримання ліцензій для вашого бізнесу.</div>
       
       <br>
       <ul>
@@ -138,7 +138,7 @@
 <a href="https://ukravtobezpeka.org/contact/">Договір з АТП</a><br>
 <a href="https://ukravtobezpeka.org/contact/">Та інші.</a><br></div>
     <br>
-        <li><strong>Режим роботи: </strong>Пн-Нд 8:00-20:00</li>
+        <li><strong>Режим роботи: </strong>Пн-Нд 8:00-18:00</li>
 
         
         <li style="white-space: pre-wrap;"><strong>Адреса: </strong><br>Україна, м. Київ, 02068
