--- a/about/index.html
+++ b/about/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Про нас - УКРАВТОБЕЗПЕКА</title>
-  
+  <meta name="description" content="ГРОМАДСЬКА ОРГАНІЗАЦІЯ “УКРАВТОБЕЗПЕКА” є добровільним громадським об’єднанням фізичних осіб.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
