--- a/contact/index.html
+++ b/contact/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Контакти - УКРАВТОБЕЗПЕКА</title>
-  
+  <meta name="description" content="Тел: &#43;380664064039; Viber: &#43;380962727989; Telegram: &#43;380962727989; Email: ukravtobezpeka@ukr.net">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
