--- a/services/mizhnarodni/index.html
+++ b/services/mizhnarodni/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Ліцензія на міжнародні перевезення вантажів. - УКРАВТОБЕЗПЕКА</title>
-  
+  <meta name="description" content="Оформлення Ліцензії на Міжнародні Перевезення Вантажів. Повний спектр послуг для перевізників. УКРАВТОБЕЗПЕКА.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
@@ -111,11 +111,12 @@
       <br>
 	<br>
 	  <div><strong> Зверніться до нас зараз, і ми гарантуємо швидке та безпроблемне отримання ліцензій для вашого бізнесу. Залиште всю рутину та труднощі нашим експертам.</strong></div>
-              <li><strong>Тел: </strong><a href="tel:&#43;380664064039">&#43;380664064039</a></li>
+	  	<ul style="margin-top: 10px; margin-bottom: 5px; line-height: 48px;">
+        <li><strong>Тел: </strong><a href="tel:&#43;380664064039">&#43;380664064039</a></li>
         <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989">+380962727989</a></li>
         <li><strong>Telegram: </strong><a href="https://t.me/%2B380962727989">+380962727989</a></li>
-                <li><strong>Email: </strong><a href="mailto:ukravtobezpeka@ukr.net">
-            ukravtobezpeka@ukr.net</a></li>
+      
+        </ul>
         <br>
         <div class="content"><p><strong>Для здійснення міжнародних перевезень вантажів вантажними автомобілями автомобільні перевізники повинні мати відповідну ліцензію.</strong></p>
 <p><strong>ГРОМАДСЬКА ОРГАНІЗАЦІЯ „УКРАВТОБЕЗПЕКА” пропонує суб’єктам господарювання:</strong></p>
