--- a/landingtwo/index.html
+++ b/landingtwo/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Ліцензії на перевезення вантажів, пасажирів, тощо. - УКРАВТОБЕЗПЕКА</title>
-  
+  <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
