--- a/services/index.html
+++ b/services/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
 
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <title>Перелік послуг - УКРАВТОБЕЗПЕКА</title>
-  
+  <meta name="description" content="Перелік послуг, що ГО “УКРАВТОБЕЗПЕКА” пропонує для перевізників. Вся Україна. Гарантія. Звертайтесь!">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   
