--- a/services/legkovinazamovlennya/index.html
+++ b/services/legkovinazamovlennya/index.html
@@ -22,7 +22,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.1fcd47454b48916a73bd70e3c1396bfbf16aead9f87abe9af1683fc3132f1b4d.css">
+  <link rel="stylesheet" href="/css/style.min.38a3b8d89dbd4af2af47bc7f14a41c7f2a758e1b0f0120404c16c40dc21d4ac3.css">
   
 
   
@@ -108,9 +108,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-      <br>
-	<br>
-	  <div><strong> Зверніться до нас зараз, і ми гарантуємо швидке та безпроблемне отримання ліцензій для вашого бізнесу. Залиште всю рутину та труднощі нашим експертам.</strong></div>
+
 	  	<ul style="margin-top: 10px; margin-bottom: 5px; line-height: 48px;">
         <li><strong>Тел: </strong><a href="tel:&#43;380664064039">&#43;380664064039</a></li>
         <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989">+380962727989</a></li>
@@ -118,14 +116,7 @@
       
         </ul>
         <br>
-        <div class="content"><p><strong>Для надання послуг з перевезення легковими автомобілями
-на замовлення автомобільні перевізники, автомобільні самозайняті перевізники повинні мати відповідну ліцензію.</strong></p>
-<p><strong>ГРОМАДСЬКА ОРГАНІЗАЦІЯ „УКРАВТОБЕЗПЕКА” пропонує суб’єктам господарювання:</strong></p>
-<ul>
-<li>консультування з питань отримання ліцензії;</li>
-<li>здійснення перевірки документів (інформації) на відповідність ліцензійним умовам;</li>
-<li>оформлення та подання до органу ліцензування документів для отримання ліцензії.</li>
-</ul>
+        <div class="content"><p><strong>ГРОМАДСЬКА ОРГАНІЗАЦІЯ „УКРАВТОБЕЗПЕКА” пропонує суб’єктам господарювання: допомогу в отриманні ліцензії на право провадження господарської діяльності з перевезення пасажирів легковими автомобілями на замовлення.</strong></p>
 <p><strong>Вартість послуг:</strong></p>
 <ul>
 <li>від 2500 грн.</li>
@@ -142,7 +133,7 @@
 <ul>
 <li>За видачу ліцензії справляється разова плата в розмірі одного прожиткового мінімуму, виходячи з розміру прожиткового мінімуму для працездатних осіб, що діє на день прийняття органом ліцензування рішення про видачу ліцензії, якщо інший розмір плати не встановлений законом.</li>
 </ul>
-<p>ЗАГАЛЬНІ ПОЛОЖЕННЯ ЩОДО ПЕРЕВЕЗЕННЯ ПАСАЖИРІВ ЛЕГКОВИМИ АВТОМОБІЛЯМИ НА ЗАМОВЛЕННЯ.</p>
+<p><strong>ЗАГАЛЬНІ ПОЛОЖЕННЯ ЩОДО ПЕРЕВЕЗЕННЯ ПАСАЖИРІВ ЛЕГКОВИМИ АВТОМОБІЛЯМИ НА ЗАМОВЛЕННЯ.</strong></p>
 <p>ВНУТРІШНІ ПЕРЕВЕЗЕННЯ ПАСАЖИРІВ.</p>
 <p>Внутрішні перевезення – це перевезення пасажирів територією України без перетину державного кордону України.</p>
 <p>Послуги з перевезення пасажирів легковими автомобілями на замовлення можуть надаватися тільки за попередньою домовленістю із замовником послуг і не можуть надаватися на стоянках таксі та на шляху прямування автомобіля громадянам, з якими не було попередньої домовленості про послугу.</p>
@@ -160,7 +151,7 @@
 <p>Міжнародні перевезення пасажирів – це перевезення пасажирів автомобільним транспортом з перетином державного кордону.</p>
 <p>Організацію міжнародних перевезень пасажирів здійснюють перевізники відповідно до міжнародних договорів України з питань міжнародних автомобільних перевезень.</p>
 <p>До міжнародних перевезень пасажирів допускаються резиденти України, які мають досвід роботи на внутрішніх перевезеннях на договірних умовах не менше ніж три роки.</p>
-<p>ВІДПОВІДАЛЬНІСТЬ ЗА ПРОВАДЖЕННЯ ГОСПОДАРСЬКОЇ ДІЯЛЬНОСТІ БЕЗ ЛІЦЕНЗІЇ.</p>
+<p><strong>ВІДПОВІДАЛЬНІСТЬ ЗА ПРОВАДЖЕННЯ ГОСПОДАРСЬКОЇ ДІЯЛЬНОСТІ БЕЗ ЛІЦЕНЗІЇ.</strong></p>
 <p>За провадження виду господарської діяльності, що підлягає ліцензуванню, без ліцензії суб’єкти господарювання притягаються до адміністративної відповідальності, передбаченої статтею 164 Кодексу України про адміністративні правопорушення.</p>
 </div>
         
