--- a/services/medichna/index.html
+++ b/services/medichna/index.html
@@ -22,7 +22,7 @@
 
   
   
-  <link rel="stylesheet" href="/css/style.min.1fcd47454b48916a73bd70e3c1396bfbf16aead9f87abe9af1683fc3132f1b4d.css">
+  <link rel="stylesheet" href="/css/style.min.38a3b8d89dbd4af2af47bc7f14a41c7f2a758e1b0f0120404c16c40dc21d4ac3.css">
   
 
   
@@ -108,9 +108,7 @@
   <div class="row justify-content-start">
     <div class="col-12 col-md-8">
       <div class="service service-single">
-      <br>
-	<br>
-	  <div><strong> Зверніться до нас зараз, і ми гарантуємо швидке та безпроблемне отримання ліцензій для вашого бізнесу. Залиште всю рутину та труднощі нашим експертам.</strong></div>
+
 	  	<ul style="margin-top: 10px; margin-bottom: 5px; line-height: 48px;">
         <li><strong>Тел: </strong><a href="tel:&#43;380664064039">&#43;380664064039</a></li>
         <li><strong>Viber: </strong><a href="viber://chat?number=%2B380962727989">+380962727989</a></li>
@@ -118,13 +116,7 @@
       
         </ul>
         <br>
-        <div class="content"><p><strong>Для зійснення щозмінного передрейсового та післярейсового медичних оглядів водіїв транспортних засобів суб’єкти господарювання повинні мати відповідну ліцензію.</strong></p>
-<p><strong>ГРОМАДСЬКА ОРГАНІЗАЦІЯ „УКРАВТОБЕЗПЕКА” пропонує суб’єктам господарювання:</strong></p>
-<ul>
-<li>консультування з питань отримання ліцензії;</li>
-<li>здійснення перевірки документів (інформації) на відповідність ліцензійним умовам;</li>
-<li>оформлення та подання до органу ліцензування документів для отримання ліцензії.</li>
-</ul>
+        <div class="content"><p><strong>ГРОМАДСЬКА ОРГАНІЗАЦІЯ „УКРАВТОБЕЗПЕКА” пропонує суб’єктам господарювання допомогу в отриманні ліцензії на право провадження господарської діяльності з медичної практики.</strong></p>
 <p><strong>Вартість послуг:</strong></p>
 <ul>
 <li>від 5500 грн.</li>
@@ -141,12 +133,12 @@
 <ul>
 <li>За видачу ліцензії справляється разова плата в розмірі одного прожиткового мінімуму, виходячи з розміру прожиткового мінімуму для працездатних осіб, що діє на день прийняття органом ліцензування рішення про видачу ліцензії, якщо інший розмір плати не встановлений законом.</li>
 </ul>
-<p>ЗАГАЛЬНІ ПОЛОЖЕННЯ ЩОДО ПРОВЕДЕННЯ ЩОЗМІННОГО ПЕРЕДРЕЙСОВОГО ТА ПІСЛЯРЕЙСОВОГО МЕДИЧНИХ ОГЛЯДІВ ВОДІЇВ ТРАНСПОРТНИХ ЗАСОБІВ.</p>
+<p><strong>ЗАГАЛЬНІ ПОЛОЖЕННЯ ЩОДО ПРОВЕДЕННЯ ЩОЗМІННОГО ПЕРЕДРЕЙСОВОГО ТА ПІСЛЯРЕЙСОВОГО МЕДИЧНИХ ОГЛЯДІВ ВОДІЇВ ТРАНСПОРТНИХ ЗАСОБІВ.</strong></p>
 <p>Щозмінному передрейсовому та післярейсовому медичним оглядам підлягають водії транспортних засобів підприємств, установ та організацій незалежно від форми власності, фізичних осіб-підприємців, що здійснюють перевезення пасажирів та вантажів.</p>
 <p>Щозмінні передрейсові та післярейсові медичні огляди водіїв транспортних засобів здійснюються лікарями лікувального профілю та/або молодшими медичними працівниками з медичною освітою за спеціальністю «сестринська справа», «лікувальна справа».</p>
 <p>Щозмінний передрейсовий медичний огляд проводиться для водіїв транспортних засобів перевізника безпосередньо перед їх виїздом у рейс. У разі виявлення ознак хвороби протягом зміни водії підлягають післярейсовому медичному огляду.</p>
 <p>Проведення щозмінних передрейсових та післярейсових медичних оглядів водіїв здійснюється у відведеному спеціальному приміщенні.</p>
-<p>ВІДПОВІДАЛЬНІСТЬ ЗА ПРОВАДЖЕННЯ ГОСПОДАРСЬКОЇ ДІЯЛЬНОСТІ БЕЗ ЛІЦЕНЗІЇ.</p>
+<p><strong>ВІДПОВІДАЛЬНІСТЬ ЗА ПРОВАДЖЕННЯ ГОСПОДАРСЬКОЇ ДІЯЛЬНОСТІ БЕЗ ЛІЦЕНЗІЇ.</strong></p>
 <p>За провадження виду господарської діяльності, що підлягає ліцензуванню, без ліцензії суб’єкти господарювання притягаються до адміністративної відповідальності, передбаченої статтею 164 Кодексу України про адміністративні правопорушення.</p>
 </div>
         
